--- a/index.html
+++ b/index.html
@@ -34,27 +34,57 @@
  
 
      <section>
-       <h1> en el HYPE</h1>
-       <h2>Indumentaria para exigentes</h2>
+         <h1> en el HYPE</h1>
+         <h2>Indumentaria para exigentes</h2>
      </section>
  </header>
 
 
  <main>
      <section>
-         <div>
-             <iframe
-             width="560" height="315" src="https://www.youtube.com/embed/UbpuZCB3x9k" title="YouTube video player"    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"        allowfullscreen>
-             </iframe>
+         <div class="banner">
+             <img src="./img/banner.jpg" class="banner-img" alt="banner web">
          </div>
-
-
          <div>
-         <img class="border" src="./img/modelos off white.jpg" alt="modelos off-white">
+             <h3>PRODUCTOS DESTACADOS</h3>
          </div>
- 
-         <div>
-         <img class="border" src="./img/modelos mujeres off.jpg" alt="modelos mujeres">
+         <div class="grid-index">
+             <article>
+                 <img src="./img/ADIDAS YEEZY BOOST 700.jpg" class="border" alt="zapatillas adidas yeezy bost 700">
+                 <p>Adidas Yeezy Boost 700</p>
+             </article>
+             <article>
+                 <img src="./img/AIR JORDAN 1 LOW ROYAL YELLOW.jpg" class="border" alt="zapatillas AIR JORDAN 1 LOW ROYAL YELLOW">
+                 <p>Air Jordan 1 Low Royal Yellow</p>
+             </article>
+             <article>
+                 <img src="./img/AIR JORDAN 1 MID BARELY ROSE.jpg" class="border" alt="zapatillas AIR JORDAN 1 MID BARELY ROSE">
+                 <p>Air Jordan 1 Mid Barely Rose</p>
+             </article>
+             <article>
+                 <img src="./img/NIKE AIR FORCE 1 LOW SKELETON ORANGE.jpg" class="border" alt="zapatillas AIR FORCE 1 LOW SKELETON ORANGE">
+                 <p>Nike Air Force 1 Low Skeleton orange</p>
+             </article>
+             <article>
+                 <img src="./img/NIKE BIG SWOOSH JACKET.jpg" class="border" alt="campera NIKE BIG SWOOSH JACKET">
+                 <p>Nike big Swoosh Jacket</p>
+             </article>
+             <article>
+                 <img src="./img/NIKE DUNK LOW RETRO WHITE BLACK.jpg" class="border" alt="zapatillas NIKE DUNK LOW RETRO WHITE BLACK">
+                 <p>Nike Dunk Low Retro White Black</p>
+             </article>
+             <article>
+                 <img src="./img/NIKE X AMBUSH NBA.jpg" class="border" alt="pantalon NIKE X AMBUSH NBA">
+                 <p>Pantalon Nike x Ambush NBA</p>
+             </article>
+             <article>
+                <img src="./img/NIKE AIR FORCE 1 LOW JUST DO IT.jpg" class="border" alt="zapatillas air force just do it">
+                <p>Nike Air Foirce 1 Low Just Do It</p>
+             </article>
+             <article>
+                <img src="./img/NIKE DUNK LOW SB BLUE FURY.jpg" class="border" alt="zapatillas NIKE DUNK LOW SB BLUE FURY">
+                <p>Nike Dunk Low SB Blue Fury</p>
+             </article>
          </div>
      </section>
  </main>
