--- a/sections/productos.html
+++ b/sections/productos.html
@@ -70,6 +70,34 @@
              <img class="border" src="../img/Jordan-4-Retro-University-Blue.jpg" alt="jordan 4 university">
              <p>Jordan 4 Retro University Blue</p>
           </article>
+          <article>
+             <img src="../img/ADIDAS YEEZY BOOST 700.jpg" class="border" alt="zapatillas adidas yeezy bost 700">
+             <p>Adidas Yeezy Boost 700</p>
+          </article>
+          <article>
+             <img src="../img/AIR JORDAN 1 LOW ROYAL YELLOW.jpg" class="border" alt="zapatillas AIR JORDAN 1 LOW ROYAL YELLOW">
+             <p>Air Jordan 1 Low Royal Yellow</p>
+          </article>
+          <article>
+             <img src="../img/AIR JORDAN 1 MID BARELY ROSE.jpg" class="border" alt="zapatillas AIR JORDAN 1 MID BARELY ROSE">
+             <p>Air Jordan 1 Mid Barely Rose</p>
+          </article>
+          <article>
+             <img src="../img/NIKE AIR FORCE 1 LOW SKELETON ORANGE.jpg" class="border" alt="zapatillas AIR FORCE 1 LOW SKELETON ORANGE">
+             <p>Nike Air Force 1 Low Skeleton orange</p>
+          </article>
+          <article>
+             <img src="../img/NIKE BIG SWOOSH JACKET.jpg" class="border" alt="campera NIKE BIG SWOOSH JACKET">
+             <p>Nike big Swoosh Jacket</p>
+          </article>
+          <article>
+             <img src="../img/NIKE DUNK LOW RETRO WHITE BLACK.jpg" class="border" alt="zapatillas NIKE DUNK LOW RETRO WHITE BLACK">
+             <p>Nike Dunk Low Retro White Black</p>
+          </article>
+          <article>
+             <img src="../img/NIKE X AMBUSH NBA.jpg" class="border" alt="pantalon NIKE X AMBUSH NBA">
+             <p>Pantalon Nike x Ambush NBA</p>
+          </article>
        </div>
     </main>
 
