--- a/sections/contacto.html
+++ b/sections/contacto.html
@@ -69,6 +69,9 @@
                 <br>
                 <input type="submit" value="Enviar info">
             </form>
+            <div class="mapa">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26281.72924925776!2d-58.438524983079574!3d-34.573396763264014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb59c771eb933%3A0x6b3113b596d78c69!2sPalermo%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1658013301427!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
         </main>
  </section>
     <br>
