--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
     <title>Inicio</title>
 </head>
@@ -34,8 +35,8 @@
  
 
      <section>
-         <h1> en el HYPE</h1>
-         <h2>Indumentaria para exigentes</h2>
+         <h1 data-aos="zoom-in"> en el HYPE</h1>
+         <h2 data-aos="zoom-in">Indumentaria para exigentes</h2>
      </section>
  </header>
 
@@ -43,46 +44,46 @@
  <main>
      <section>
          <div class="banner">
-             <img src="./img/banner.jpg" class="banner-img" alt="banner web">
+             <img src="./img/banner2.jpg" class="banner-img" alt="banner web">
          </div>
          <div>
              <h3>PRODUCTOS DESTACADOS</h3>
          </div>
          <div class="grid-index">
              <article>
-                 <img src="./img/ADIDAS YEEZY BOOST 700.jpg" class="border" alt="zapatillas adidas yeezy bost 700">
+                 <img src="./img/ADIDAS YEEZY BOOST 700.jpg" class="border" alt="zapatillas adidas yeezy bost 700" data-aos="flip-up">
                  <p>Adidas Yeezy Boost 700</p>
              </article>
              <article>
-                 <img src="./img/AIR JORDAN 1 LOW ROYAL YELLOW.jpg" class="border" alt="zapatillas AIR JORDAN 1 LOW ROYAL YELLOW">
+                 <img src="./img/AIR JORDAN 1 LOW ROYAL YELLOW.jpg" class="border" alt="zapatillas AIR JORDAN 1 LOW ROYAL YELLOW" data-aos="flip-up">
                  <p>Air Jordan 1 Low Royal Yellow</p>
              </article>
              <article>
-                 <img src="./img/AIR JORDAN 1 MID BARELY ROSE.jpg" class="border" alt="zapatillas AIR JORDAN 1 MID BARELY ROSE">
+                 <img src="./img/AIR JORDAN 1 MID BARELY ROSE.jpg" class="border" alt="zapatillas AIR JORDAN 1 MID BARELY ROSE" data-aos="flip-up">
                  <p>Air Jordan 1 Mid Barely Rose</p>
              </article>
              <article>
-                 <img src="./img/NIKE AIR FORCE 1 LOW SKELETON ORANGE.jpg" class="border" alt="zapatillas AIR FORCE 1 LOW SKELETON ORANGE">
+                 <img src="./img/NIKE AIR FORCE 1 LOW SKELETON ORANGE.jpg" class="border" alt="zapatillas AIR FORCE 1 LOW SKELETON ORANGE" data-aos="flip-up">
                  <p>Nike Air Force 1 Low Skeleton orange</p>
              </article>
              <article>
-                 <img src="./img/NIKE BIG SWOOSH JACKET.jpg" class="border" alt="campera NIKE BIG SWOOSH JACKET">
+                 <img src="./img/NIKE BIG SWOOSH JACKET.jpg" class="border" alt="campera NIKE BIG SWOOSH JACKET" data-aos="flip-up">
                  <p>Nike big Swoosh Jacket</p>
              </article>
              <article>
-                 <img src="./img/NIKE DUNK LOW RETRO WHITE BLACK.jpg" class="border" alt="zapatillas NIKE DUNK LOW RETRO WHITE BLACK">
+                 <img src="./img/NIKE DUNK LOW RETRO WHITE BLACK.jpg" class="border" alt="zapatillas NIKE DUNK LOW RETRO WHITE BLACK" data-aos="flip-up">
                  <p>Nike Dunk Low Retro White Black</p>
              </article>
              <article>
-                 <img src="./img/NIKE X AMBUSH NBA.jpg" class="border" alt="pantalon NIKE X AMBUSH NBA">
+                 <img src="./img/NIKE X AMBUSH NBA.jpg" class="border" alt="pantalon NIKE X AMBUSH NBA" data-aos="flip-up">
                  <p>Pantalon Nike x Ambush NBA</p>
              </article>
              <article>
-                <img src="./img/NIKE AIR FORCE 1 LOW JUST DO IT.jpg" class="border" alt="zapatillas air force just do it">
+                <img src="./img/NIKE AIR FORCE 1 LOW JUST DO IT.jpg" class="border" alt="zapatillas air force just do it" data-aos="flip-up">
                 <p>Nike Air Foirce 1 Low Just Do It</p>
              </article>
              <article>
-                <img src="./img/NIKE DUNK LOW SB BLUE FURY.jpg" class="border" alt="zapatillas NIKE DUNK LOW SB BLUE FURY">
+                <img src="./img/NIKE DUNK LOW SB BLUE FURY.jpg" class="border" alt="zapatillas NIKE DUNK LOW SB BLUE FURY" data-aos="flip-up">
                 <p>Nike Dunk Low SB Blue Fury</p>
              </article>
          </div>
@@ -99,7 +100,10 @@
     <a href="https://web.whatsapp.com/" target="_blank"><img src="./img/icons8-whatsapp-64.png" alt="icono whatsapp para contactar"></a>
  </div>
 
- 
+ <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+ <script>
+    AOS.init();
+  </script>
     
 </body>
 </html>
