--- a/index.html
+++ b/index.html
@@ -5,34 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./style/style.css">
     <title>Inicio</title>
 </head>
 <body>
 
  <header>
-     <nav>
-         <ul>
-             <div class="flex-container">
-                  <li>
-                  <a href="index.html">INICIO</a>
-                  </li>
-                  <li>
-                  <a href="./sections/marcas.html">MARCAS</a>
-                  </li>
-                  <li>
-                  <a href="./sections/productos.html">PRODUCTOS</a>
-                  </li>
-                  <li>
-                  <a href="./sections/nosotros.html">NOSOTROS</a>
-                  </li>
-                  <li>
-                  <a href="./sections/contacto.html">CONTACTO</a>
-                  </li> 
-             </div>           
-         </ul>
-     </nav>
- 
+    <nav class="navbar navbar-expand-lg navbar-light FondoNav">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <a class="navbar-active" href="./index.html">INICIO</a>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./sections/marcas.html">MARCAS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="./sections/productos.html">PRODUCTOS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="./sections/nosotros.html">NOSOTROS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="./sections/contacto.html">CONTACTO</a>
+              </li>
+            </ul>
+            <form class="d-flex">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+      </nav>
+
 
      <section>
          <h1 data-aos="zoom-in"> en el HYPE</h1>
@@ -44,7 +52,7 @@
  <main>
      <section>
          <div class="banner">
-             <img src="./img/banner2.jpg" class="banner-img" alt="banner web">
+             <img src="./img/banner 3.jpg" class="banner-img" alt="banner web">
          </div>
          <div>
              <h3>PRODUCTOS DESTACADOS</h3>
@@ -52,39 +60,39 @@
          <div class="grid-index">
              <article>
                  <img src="./img/ADIDAS YEEZY BOOST 700.jpg" class="border" alt="zapatillas adidas yeezy bost 700" data-aos="flip-up">
-                 <p>Adidas Yeezy Boost 700</p>
+                 <p class="text-p">Adidas Yeezy Boost 700</p>
              </article>
              <article>
                  <img src="./img/AIR JORDAN 1 LOW ROYAL YELLOW.jpg" class="border" alt="zapatillas AIR JORDAN 1 LOW ROYAL YELLOW" data-aos="flip-up">
-                 <p>Air Jordan 1 Low Royal Yellow</p>
+                 <p class="text-p">Air Jordan 1 Low Royal Yellow</p>
              </article>
              <article>
                  <img src="./img/AIR JORDAN 1 MID BARELY ROSE.jpg" class="border" alt="zapatillas AIR JORDAN 1 MID BARELY ROSE" data-aos="flip-up">
-                 <p>Air Jordan 1 Mid Barely Rose</p>
+                 <p class="text-p">Air Jordan 1 Mid Barely Rose</p>
              </article>
              <article>
                  <img src="./img/NIKE AIR FORCE 1 LOW SKELETON ORANGE.jpg" class="border" alt="zapatillas AIR FORCE 1 LOW SKELETON ORANGE" data-aos="flip-up">
-                 <p>Nike Air Force 1 Low Skeleton orange</p>
+                 <p class="text-p">Nike Air Force 1 Low Skeleton orange</p>
              </article>
              <article>
                  <img src="./img/NIKE BIG SWOOSH JACKET.jpg" class="border" alt="campera NIKE BIG SWOOSH JACKET" data-aos="flip-up">
-                 <p>Nike big Swoosh Jacket</p>
+                 <p class="text-p">Nike big Swoosh Jacket</p>
              </article>
              <article>
                  <img src="./img/NIKE DUNK LOW RETRO WHITE BLACK.jpg" class="border" alt="zapatillas NIKE DUNK LOW RETRO WHITE BLACK" data-aos="flip-up">
-                 <p>Nike Dunk Low Retro White Black</p>
+                 <p class="text-p">Nike Dunk Low Retro White Black</p>
              </article>
              <article>
                  <img src="./img/NIKE X AMBUSH NBA.jpg" class="border" alt="pantalon NIKE X AMBUSH NBA" data-aos="flip-up">
-                 <p>Pantalon Nike x Ambush NBA</p>
+                 <p class="text-p">Pantalon Nike x Ambush NBA</p>
              </article>
              <article>
                 <img src="./img/NIKE AIR FORCE 1 LOW JUST DO IT.jpg" class="border" alt="zapatillas air force just do it" data-aos="flip-up">
-                <p>Nike Air Foirce 1 Low Just Do It</p>
+                <p class="text-p">Nike Air Foirce 1 Low Just Do It</p>
              </article>
              <article>
                 <img src="./img/NIKE DUNK LOW SB BLUE FURY.jpg" class="border" alt="zapatillas NIKE DUNK LOW SB BLUE FURY" data-aos="flip-up">
-                <p>Nike Dunk Low SB Blue Fury</p>
+                <p class="text-p">Nike Dunk Low SB Blue Fury</p>
              </article>
          </div>
      </section>
@@ -104,6 +112,9 @@
  <script>
     AOS.init();
   </script>
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
     
 </body>
 </html>
