--- a/sections/contacto.html
+++ b/sections/contacto.html
@@ -4,71 +4,92 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/style.css">
     <title>Contacto</title>
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <div class="flex-container">
-                 <li>
-                 <a href="../index.html">INICIO</a>
-                 </li>
-                 <li>
-                 <a href="./marcas.html">MARCAS</a>
-                 </li>
-                 <li>
-                 <a href="./productos.html">PRODUCTOS</a>
-                 </li>
-                 <li>
-                 <a href="./nosotros.html">NOSOTROS</a>
-                 </li>
-                 <li>
-                 <a href="./contacto.html">CONTACTO</a>
-                </li>
+        <nav class="navbar navbar-expand-lg navbar-light FondoNav">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <a class="navbar-active" href="../index.html">INICIO</a>
+              <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../sections/marcas.html">MARCAS</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="../sections/productos.html">PRODUCTOS</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="../sections/nosotros.html">NOSOTROS</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="../sections/contacto.html">CONTACTO</a>
+                  </li>
+                </ul>
+                <form class="d-flex">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
               </div>
-            </ul>
-        </nav>
+            </div>
+          </nav>
     </header>
 
     <section>
         <main>
-            <form>
-                <label for="nombre y apellido">Ingrese nombre y apellido</label><br>
-                <input type="text" name="nombre y apellido">
-                <br>
-                <label for="edad"> Ingrese edad</label><br>
-                <input type="number" name="edad">
-                <br>
-                <label for="obesarvaciones">Ingrese dudas</label>
-                <br>
-                <textarea type="text" name="obesarvaciones"></textarea>
-                <br>
-
-
-                <input type="submit" value="Enviar info">
-                <input type="reset" value="Borrar info">
-
-                <div>Hombre</div>
-                <input type="radio" name="sexo" value="hombre">
-                <div>Mujer</div>
-                <input type="radio" name="sexo" value="mujer">
-
-                <br>
-                
-                <div>Selecciona Talle</div>
-                <select name="Talle">
-                    <option value="L">Large</option>
-                    <option value="M">Medium</option>
-                    <option value="S">Small</option>
-                </select>
-
-                <div>Acepta términos y condiciones</div>
-                <input type="checkbox" name="acepta" value="1">
-                <br>
-                <input type="submit" value="Enviar info">
-            </form>
+            <form class="row g-3 Formulario">
+                <div class="col-md-6">
+                  <label for="inputEmail4" class="form-label">Email</label>
+                  <input type="email" class="form-control" id="inputEmail4">
+                </div>
+                <div class="col-md-6">
+                  <label for="inputPassword4" class="form-label">Contraseña</label>
+                  <input type="password" class="form-control" id="inputPassword4">
+                </div>
+                <div class="col-12">
+                  <label for="inputAddress" class="form-label">Direccion</label>
+                  <input type="text" class="form-control" id="inputAddress" placeholder="Av. Libertador 3232">
+                </div>
+                <div class="col-12">
+                  <label for="inputAddress2" class="form-label">Direccion 2</label>
+                  <input type="text" class="form-control" id="inputAddress2" placeholder="Casa, departamento o trabajo">
+                </div>
+                <div class="col-md-6">
+                  <label for="inputCity" class="form-label">Provincia</label>
+                  <input type="text" class="form-control" id="inputCity">
+                </div>
+                <div class="col-md-4">
+                  <label for="inputState" class="form-label">Ciudad</label>
+                  <select id="inputState" class="form-select">
+                    <option selected>Choose...</option>
+                    <option>Argentina</option>
+                    <option>Uruguay</option>
+                    <option>Chile</option>
+                    <option>Paraguay</option>
+                    <option>Bolivia</option>
+                  </select>
+                </div>
+                <div class="col-md-2">
+                  <label for="inputZip" class="form-label">C.P</label>
+                  <input type="text" class="form-control" id="inputZip">
+                </div>
+                <div class="col-12">
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="gridCheck">
+                    <label class="form-check-label" for="gridCheck">
+                      Check me out
+                    </label>
+                  </div>
+                </div>
+                <div class="col-12">
+                  <button type="submit" class="btn btn-primary">Sign in</button>
+                </div>
+              </form>
             <div class="mapa">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26281.72924925776!2d-58.438524983079574!3d-34.573396763264014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb59c771eb933%3A0x6b3113b596d78c69!2sPalermo%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1658013301427!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
@@ -82,5 +103,10 @@
     <div class="logowp">
         <a href="https://web.whatsapp.com/" target="_blank"><img src="../img/icons8-whatsapp-64.png" alt="icono whatsapp para contactar"></a>
     </div>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </body>
 </html>
