--- a/sections/nosotros.html
+++ b/sections/nosotros.html
@@ -4,32 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/style.css">
     <title>Nosotros</title>
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-             <div class="flex-container">
-                 <li>
-                 <a href="../index.html">INICIO</a>
-                 </li>
-                 <li>
-                 <a href="./marcas.html">MARCAS</a>
-                 </li>
-                 <li>
-                 <a href="./productos.html">PRODUCTOS</a>
-                 </li>
-                 <li>
-                 <a href="./nosotros.html">NOSOTROS</a>
-                 </li>
-                 <li>
-                 <a href="./contacto.html">CONTACTO</a>
-                 </li>
+        <nav class="navbar navbar-expand-lg navbar-light FondoNav">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <a class="navbar-active" href="../index.html">INICIO</a>
+              <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../sections/marcas.html">MARCAS</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="../sections/productos.html">PRODUCTOS</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="../sections/nosotros.html">NOSOTROS</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="../sections/contacto.html">CONTACTO</a>
+                  </li>
+                </ul>
+                <form class="d-flex">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
               </div>
-            </ul>
-        </nav>
+            </div>
+          </nav>
     </header>
 
     <main>
@@ -51,5 +59,10 @@
     <div class="logowp">
         <a href="https://web.whatsapp.com/" target="_blank"><img src="../img/icons8-whatsapp-64.png" alt="icono whatsapp para contactar"></a>
     </div>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </body>
 </html>
