--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/estilos.css">
     <title>Inicio</title>
 </head>
 <body>
@@ -34,72 +34,66 @@
               </li>
             </ul>
             <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <input class="form-control me-2" type="search" placeholder="" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Buscar</button>
             </form>
           </div>
         </div>
-      </nav>
+   </nav>
 
-
-     <section>
-         <h1 data-aos="zoom-in"> en el HYPE</h1>
-         <h2 data-aos="zoom-in">Indumentaria para exigentes</h2>
-     </section>
+    <h1 data-aos="zoom-in"> en el HYPE</h1>
+    <h2 data-aos="zoom-in">Indumentaria para exigentes</h2>
  </header>
 
 
  <main>
-     <section>
-         <div class="banner">
-             <img src="./img/banner 3.jpg" class="banner-img" alt="banner web">
-         </div>
-         <div>
-             <h3>PRODUCTOS DESTACADOS</h3>
-         </div>
-         <div class="grid-index">
-             <article>
-                 <img src="./img/ADIDAS YEEZY BOOST 700.jpg" class="border" alt="zapatillas adidas yeezy bost 700" data-aos="flip-up">
-                 <p class="text-p">Adidas Yeezy Boost 700</p>
-             </article>
-             <article>
-                 <img src="./img/AIR JORDAN 1 LOW ROYAL YELLOW.jpg" class="border" alt="zapatillas AIR JORDAN 1 LOW ROYAL YELLOW" data-aos="flip-up">
-                 <p class="text-p">Air Jordan 1 Low Royal Yellow</p>
-             </article>
-             <article>
-                 <img src="./img/AIR JORDAN 1 MID BARELY ROSE.jpg" class="border" alt="zapatillas AIR JORDAN 1 MID BARELY ROSE" data-aos="flip-up">
-                 <p class="text-p">Air Jordan 1 Mid Barely Rose</p>
-             </article>
-             <article>
-                 <img src="./img/NIKE AIR FORCE 1 LOW SKELETON ORANGE.jpg" class="border" alt="zapatillas AIR FORCE 1 LOW SKELETON ORANGE" data-aos="flip-up">
-                 <p class="text-p">Nike Air Force 1 Low Skeleton orange</p>
-             </article>
-             <article>
-                 <img src="./img/NIKE BIG SWOOSH JACKET.jpg" class="border" alt="campera NIKE BIG SWOOSH JACKET" data-aos="flip-up">
-                 <p class="text-p">Nike big Swoosh Jacket</p>
-             </article>
-             <article>
-                 <img src="./img/NIKE DUNK LOW RETRO WHITE BLACK.jpg" class="border" alt="zapatillas NIKE DUNK LOW RETRO WHITE BLACK" data-aos="flip-up">
-                 <p class="text-p">Nike Dunk Low Retro White Black</p>
-             </article>
-             <article>
-                 <img src="./img/NIKE X AMBUSH NBA.jpg" class="border" alt="pantalon NIKE X AMBUSH NBA" data-aos="flip-up">
-                 <p class="text-p">Pantalon Nike x Ambush NBA</p>
-             </article>
-             <article>
-                <img src="./img/NIKE AIR FORCE 1 LOW JUST DO IT.jpg" class="border" alt="zapatillas air force just do it" data-aos="flip-up">
-                <p class="text-p">Nike Air Foirce 1 Low Just Do It</p>
-             </article>
-             <article>
-                <img src="./img/NIKE DUNK LOW SB BLUE FURY.jpg" class="border" alt="zapatillas NIKE DUNK LOW SB BLUE FURY" data-aos="flip-up">
-                <p class="text-p">Nike Dunk Low SB Blue Fury</p>
-             </article>
-         </div>
-     </section>
- </main>
+   <div class="banner">
+      <img src="./img/banner 3.jpg" class="banner-img" alt="banner web">
+   </div>
+   <div>
+      <h3>PRODUCTOS DESTACADOS</h3>
+   </div>
+   <div class="grid-index">
+      <article>
+        <img src="./img/ADIDAS YEEZY BOOST 700.jpg" class="border" alt="zapatillas adidas yeezy bost 700" data-aos="flip-up">
+        <p class="text-p">Adidas Yeezy Boost 700</p>
+      </article>
+      <article>
+        <img src="./img/AIR JORDAN 1 LOW ROYAL YELLOW.jpg" class="border" alt="zapatillas AIR JORDAN 1 LOW ROYAL YELLOW" data-aos="flip-up">
+        <p class="text-p">Air Jordan 1 Low Royal Yellow</p>
+      </article>
+      <article>
+        <img src="./img/AIR JORDAN 1 MID BARELY ROSE.jpg" class="border" alt="zapatillas AIR JORDAN 1 MID BARELY ROSE" data-aos="flip-up">
+        <p class="text-p">Air Jordan 1 Mid Barely Rose</p>
+      </article>
+      <article>
+        <img src="./img/NIKE AIR FORCE 1 LOW SKELETON ORANGE.jpg" class="border" alt="zapatillas AIR FORCE 1 LOW SKELETON ORANGE" data-aos="flip-up">
+        <p class="text-p">Nike Air Force 1 Low Skeleton orange</p>
+      </article>
+      <article>
+          <img src="./img/NIKE BIG SWOOSH JACKET.jpg" class="border" alt="campera NIKE BIG SWOOSH JACKET" data-aos="flip-up">
+          <p class="text-p">Nike big Swoosh Jacket</p>
+      </article>
+      <article>
+          <img src="./img/NIKE DUNK LOW RETRO WHITE BLACK.jpg" class="border" alt="zapatillas NIKE DUNK LOW RETRO WHITE BLACK" data-aos="flip-up">
+          <p class="text-p">Nike Dunk Low Retro White Black</p>
+      </article>
+      <article>
+          <img src="./img/NIKE X AMBUSH NBA.jpg" class="border" alt="pantalon NIKE X AMBUSH NBA" data-aos="flip-up">
+          <p class="text-p">Pantalon Nike x Ambush NBA</p>
+      </article>
+      <article>
+        <img src="./img/NIKE AIR FORCE 1 LOW JUST DO IT.jpg" class="border" alt="zapatillas air force just do it" data-aos="flip-up">
+        <p class="text-p">Nike Air Foirce 1 Low Just Do It</p>
+      </article>
+      <article>
+        <img src="./img/NIKE DUNK LOW SB BLUE FURY.jpg" class="border" alt="zapatillas NIKE DUNK LOW SB BLUE FURY" data-aos="flip-up">
+        <p class="text-p">Nike Dunk Low SB Blue Fury</p>
+      </article>
+    </div>
+  </main>
 
- <br>
- <br>
+ 
  <footer>
   <p> Todos los derechos reservados © </p>
  </footer>
@@ -115,6 +109,6 @@
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-    
+
 </body>
 </html>
