--- a/index.html
+++ b/index.html
@@ -12,43 +12,42 @@
     <meta name="author" content="Lucas Bertuzzi">
     <meta name="copyrigth" content="enelHYPE">
     <meta property="0g:title" content="enelHYPE">
-    <meta property="0g:description" content="Envíos gratis a todo el país. EnelHYPE AR. Tienda ·" >
+    <meta property="0g:description" content="Envíos gratis a todo el país. EnelHYPE AR. Tienda ·">
     <meta property="0g:img" content="">
     <meta property="0g:url" content="">
     <meta property="0g:locale" content="es_Es">
-    >
 </head>
 
 <body>
  <header>
-    <nav class="navbar navbar-expand-lg navbar-light FondoNav">
-        <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <a class="navbar-active" href="./index.html">INICIO</a>
-          <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./sections/marcas.html">MARCAS</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="./sections/productos.html">PRODUCTOS</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="./sections/nosotros.html">NOSOTROS</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="./sections/contacto.html">CONTACTO</a>
-              </li>
-            </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Buscar</button>
-            </form>
-          </div>
-        </div>
-   </nav>
+  <nav class="navbar navbar-expand-lg navbar-light FondoNav">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-active" href="./index.html">INICIO</a>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="./sections/marcas.html">MARCAS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="./sections/productos.html">PRODUCTOS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="./sections/nosotros.html">NOSOTROS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="./sections/contacto.html">CONTACTO</a>
+          </li>
+        </ul>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="" aria-label="Search">
+          <button class="btn btn-outline-success BotonContacto " type="submit">Buscar</button>
+        </form>
+      </div>
+    </div>
+  </nav>
 
     <h1 data-aos="zoom-in"> en el HYPE</h1>
     <h2 data-aos="zoom-in">Indumentaria para exigentes</h2>
@@ -65,7 +64,7 @@
    <div class="grid-index">
       <article>
         <img src="./img/ADIDAS YEEZY BOOST 700.jpg" loading="lazy" class="border" alt="zapatillas adidas yeezy bost 700" data-aos="flip-up">
-        <p class="text-p">Adidas Yeezy Boost 700</p>
+          <p class="text-p">Adidas Yeezy Boost 700</p>
       </article>
       <article>
         <img src="./img/AIR JORDAN 1 LOW ROYAL YELLOW.jpg" loading="lazy" class="border" alt="zapatillas AIR JORDAN 1 LOW ROYAL YELLOW" data-aos="flip-up">
@@ -104,8 +103,16 @@
 
  
  <footer>
-  <p> Todos los derechos reservados © </p>
- </footer>
+    <div>
+      <a href="http://instagram.com/" target="_blank"><img src="./img/icono ig.png" alt="ir a instagram"></a>
+      <a href="http://facebook.com" target="_blank"><img src="./img/icono fb.png" alt="ir a facebook"></a>
+      <a href="http://twitter.com" target="_blank"><img src="./img/icono tw.png" alt="ir a twitter"></a>
+      <a href="http://github.com/LucasBertuzzi" target="_blank"><img src="./img/icono github.png" alt="ir a github"></a>
+   </div>
+   <div>
+    <p>© 2022 Copyright</p>
+   </div>
+</footer>
 
  <div class="logowp">
     <a href="https://web.whatsapp.com/" target="_blank"><img src="./img/icons8-whatsapp-64.png" alt="icono whatsapp para contactar"></a>
