--- a/sections/contacto.html
+++ b/sections/contacto.html
@@ -103,8 +103,16 @@
         </div>
     </main>
     
-  <footer>
-    <p> Todos los derechos reservados © </p>        
+    <footer>
+      <div>
+        <a href="http://instagram.com/" target="_blank"><img src="../img/icono ig.png" alt="ir a instagram"></a>
+        <a href="http://facebook.com" target="_blank"><img src="../img/icono fb.png" alt="ir a facebook"></a>
+        <a href="http://twitter.com" target="_blank"><img src="../img/icono tw.png" alt="ir a twitter"></a>
+        <a href="http://github.com/LucasBertuzzi" target="_blank"><img src="../img/icono github.png" alt="ir a github"></a>
+     </div>
+     <div>
+      <p>© 2022 Copyright</p>
+     </div>
   </footer>
 
   <div class="logowp">
