--- a/sections/marcas.html
+++ b/sections/marcas.html
@@ -48,29 +48,56 @@
           </nav>
  </header>
 
- <main class="logos">
-     <img src="../img/logo jordan.png" alt="logo jordan">
-  
-  
-     <img src="../img/logo nike.png" alt="logo nike">
-  
-  
-     <img src="../img/logo adidas.png" alt="logo adidas">
-  
-  
-     <img src="../img/icons8-louis-vuitton-a-french-fashion-house-and-luxury-retail-company-48.png" alt="logo luis vuitton">
-  
-  
-     <img src="../img/icons8-gucci-50.png" alt="logo gucci">
-  
-  
-     <img src="../img/icons8-dior,-a-french-luxury-goods-companyand-its-world's-largest-luxury-group-48.png" alt="logo dior">
+ <main class="carru">
+  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="../img/lv carru.png" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="../img/nike carru.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="../img/Christian-Dior-Logo.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="../img/essentials logo.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="../img/drew house.jpg" class="d-block w-100" alt="...">
+      </div>
+      
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
   </main>
  
 
-    <footer>
-        <p> Todos los derechos reservados © </p>        
-    </footer>
+  <footer>
+    <div>
+      <a href="http://instagram.com/" target="_blank"><img src="../img/icono ig.png" alt="ir a instagram"></a>
+      <a href="http://facebook.com" target="_blank"><img src="../img/icono fb.png" alt="ir a facebook"></a>
+      <a href="http://twitter.com" target="_blank"><img src="../img/icono tw.png" alt="ir a twitter"></a>
+      <a href="http://github.com/LucasBertuzzi" target="_blank"><img src="../img/icono github.png" alt="ir a github"></a>
+   </div>
+   <div>
+    <p>© 2022 Copyright</p>
+   </div>
+</footer>
 
     <div class="logowp">
         <a href="https://web.whatsapp.com/" target="_blank"><img src="../img/icons8-whatsapp-64.png" alt="icono whatsapp para contactar"></a>
